WelcomePopup: Fixed problem with position description hidden on mobile. Tryied to solve problem with position autocmplete on firefox for android. #514

--- a/web/Styles/app/utils/WelcomePopup.styl
+++ b/web/Styles/app/utils/WelcomePopup.styl
@@ -5,6 +5,9 @@
 @import "ColorsPalette"
 @import "mediaQueries"
 
+.ui-autocomplete
+    z-index 9000 !important
+
 /* 
     Containers setup 
 */
